--- a/Lab.2/index.html
+++ b/Lab.2/index.html
@@ -37,7 +37,7 @@
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557</p>
         <p>Email: <em class="email">htmail@mum.edu</em></p>
         <div class="validator">
-            <a href="https://validator.w3.org/check?url=https://github.com/ekibru/Wap-Prac/blob/master/lab3/lab.html">
+            <a href="https://validator.w3.org/check?url=https://ekibru.github.io/Lab2/">
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
                 alt="Validate" />
         </div>
