--- a/Lab1/index.htm
+++ b/Lab1/index.htm
@@ -22,7 +22,7 @@
         
     </ul>
     <footer>
-        <a href="https://validator.w3.org/check?url=https://github.com/ekibru/Wap-Prac/blob/master/lab3/lab.html">
+        <a href="https://validator.w3.org/check? url=https://ekibru.github.io/Lab2/Lab.2/index.html">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
             alt="Validate" />
         
