--- a/Question2/index.html
+++ b/Question2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="profile">
         <img class="image2" src="image2/mypic2.JPG" alt="Profile Picture">
     </header>
    
@@ -37,7 +37,7 @@
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557</p>
         <p>Email: <em class="email">htmail@mum.edu</em></p>
         <div class="validator">
-            <a href="https://validator.w3.org/check?url=https://ekibru.github.io/Lab2/">
+            <a href="https://jigsaw.w3.org/css-validator/check?url=https://ekibru.github.io/Lab2/Lab1/index.html">
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
                 alt="Validate" />
         </div>
