--- a/Question2/index.html
+++ b/Question2/index.html
@@ -32,12 +32,13 @@
     </main>
     <br>
     <footer>
-        <p>&#169; Ephrem Kidane</p>
+        <p><em class="copy">&#169;</em> Ephrem Kidane</p>
         <p>Maharishi University of Mangement</p>
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557</p>
         <p>Email: <em class="email">htmail@mum.edu</em></p>
+        
         <div class="validator">
-            <a href="https://jigsaw.w3.org/css-validator/check?url=https://ekibru.github.io/Lab2/Lab1/index.html">
+            <a href="https://validator.w3.org/check?url=https://ekibru.github.io/WAP-Lab-1-Assignment/Question2/index.html">
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
                 alt="Validate" />
         </div>
