--- a/Question1/index.html
+++ b/Question1/index.html
@@ -22,7 +22,7 @@
         
     </ul>
     <footer>
-        <a href="https://jigsaw.w3.org/check? url=https://ekibru.github.io/WAP-Lab-1-Assignment/Question1/index.html">
+        <a href="https://validator.w3.org/check? url=https://ekibru.github.io/WAP-Lab-1-Assignment/Question1/index.html">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
             alt="Validate" />
         
